--- a/package.json
+++ b/package.json
@@ -10,16 +10,21 @@
   "dependencies": {
     "core-js": "^3.6.5",
     "swiper": "^7.2.0",
-    "vue": "^2.6.11"
+    "vue": "^2.6.11",
+    "vuetify": "^2.5.14"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
     "@vue/cli-plugin-eslint": "~4.5.0",
     "@vue/cli-service": "~4.5.0",
     "babel-eslint": "^10.1.0",
+    "deepmerge": "^4.2.2",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^8.0.3",
-    "vue-template-compiler": "^2.6.11"
+    "sass": "~1.32",
+    "sass-loader": "^12.3.0",
+    "vue-template-compiler": "^2.6.11",
+    "webpack": "^5.64.0"
   },
   "eslintConfig": {
     "root": true,
